--- a/Project_sem_3/Areas/Admin/Views/InsurancePackages/Create.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/InsurancePackages/Create.cshtml
@@ -1,4 +1,3 @@
-
 ﻿@model  Project_sem_3.Models.InsurancePackage
 
 
@@ -12,118 +11,124 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-        <div class="container box-border-pro">
-            <div class="frm frmpro">
-                <div class="form-group">
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    <div class="row">
-                        <label for="rdbPackage_0" class="col-lg-4 col-sm-12 col-form-label col-form-label-first">Select product package:</label>
-                        <div class="col-lg-8">
-                            <div class="form-group">
-                                @* @Html.LabelFor(model => model.InsuranceId, "InsuranceId", htmlAttributes: new { @class = "control-label col-md-2" })*@
-                                <div class="col-md-10">
-                                    @Html.DropDownList("InsuranceId", null, htmlAttributes: new { @class = "form-control txt" })
-                                    @Html.ValidationMessageFor(model => model.InsuranceId, "", new { @class = "text-danger" })
-                                </div>
+    <div class="container box-border-pro">
+        <div class="frm frmpro">
+            <div class="form-group">
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="row">
+                    <label for="rdbPackage_0" class="col-lg-4 col-sm-12 col-form-label col-form-label-first">Select product package:</label>
+                    <div class="col-lg-8">
+                        <div class="form-group">
+                            @* @Html.LabelFor(model => model.InsuranceId, "InsuranceId", htmlAttributes: new { @class = "control-label col-md-2" })*@
+                            <div class="col-md-10">
+                                @Html.DropDownList("InsuranceId", null, htmlAttributes: new { @class = "form-control txt" })
+                                @Html.ValidationMessageFor(model => model.InsuranceId, "", new { @class = "text-danger" })
                             </div>
-                            @*@foreach (var item in Model)
-                {
-                    <div class="custom-control custom-radio">
-                        <input type="radio" class="@item.Price" id='rdbPackage_1' value='@item.Insurance.InsurancePackages' onclick="PackageChange();" name="insurancePackageId" required />
-                        <label class="custom-control-label" for='rdbPackage_1'><b>@String.Format("{0:c}", @item.Price) </b> @item.Description</label>
-                    </div>
-                }*@
-                            <i class="pad-top-5">
-                                <span class="req" style="color: Red;"></span>
-                            </i>
                         </div>
+                        @*@foreach (var item in Model)
+                            {
+                                <div class="custom-control custom-radio">
+                                    <input type="radio" class="@item.Price" id='rdbPackage_1' value='@item.Insurance.InsurancePackages' onclick="PackageChange();" name="insurancePackageId" required />
+                                    <label class="custom-control-label" for='rdbPackage_1'><b>@String.Format("{0:c}", @item.Price) </b> @item.Description</label>
+                                </div>
+                            }*@
+                        <i class="pad-top-5">
+                            <span class="req" style="color: Red;"></span>
+                        </i>
                     </div>
                 </div>
-                @*<div class="form-group">
+            </div>
+            @*<div class="form-group">
                     <h4>Enter the information about Insurance Package</h4>
                 </div>*@
-          
 
 
-                <div class="form-group" id="divPlate" style="display: block;">
-                    <div class="row">
-                        <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first">Name:</label>
-                        <div class="col-lg-8">
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                            </div>
-                            <i class="pad-top-5">
-                                <span  class="req" style="color:Red;"></span>
-                            </i>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="form-group">
-                    <div class="row">
-                        <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first">Description:</label>
-                        <div class="col-lg-8">
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-                            </div>
-                            <i class="pad-top-5">
-                                <span class="req" style="color:Red;"></span>
-                            </i>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-group" id="divChassis">
-                    <div class="row">
-                        <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first">Price:</label>
-                        <div class="col-lg-8">
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } }) 
-                                @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
-                            </div>
-                            <i class="pad-top-5">
-                                <span  class="req" style="color:Red;"></span>
-                            </i>
-                        </div>
-                    </div>
-                </div>
-                <input type="hidden" name="quantity" value="1" />
-
-                <div class="form-group" >                                                                                                               
-                    <div class="row">
-                        <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first pad-0">DurationContract:</label>
-                        <div class="col-lg-8">
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.DurationContract, new { htmlAttributes = new { @class = "form-control" } }) 
-                                @Html.ValidationMessageFor(model => model.DurationContract, "", new { @class = "text-danger" })
-                            </div>
-                            <i class="pad-top-5"><span  class="req" style="color:Red;"></span></i>
-                        </div>
-                    </div>
-                </div>  
-                <div class="form-group">
-                    <div class="row">
-                        <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first pad-0">DurationPay :</label>
-                        <div class="col-lg-8">
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.DurationPay, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.DurationPay, "", new { @class = "text-danger" })
-                            </div>
-                            <i class="pad-top-5"><span  class="req" style="color:Red;"></span></i>
-                        </div>
-                    </div>
-                </div>
+            <div class="form-group" id="divPlate" style="display: block;">
                 <div class="row">
-                    <input type="submit" value="Create" class="btn btn-success" />
+                    <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first">Name:</label>
+                    <div class="col-lg-8">
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                        </div>
+                        <i class="pad-top-5">
+                            <span class="req" style="color:Red;"></span>
+                        </i>
+                    </div>
                 </div>
             </div>
+
+            <div class="form-group">
+                <div class="row">
+                    <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first">Description:</label>
+                    <div class="col-lg-8">
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+                        </div>
+                        <i class="pad-top-5">
+                            <span class="req" style="color:Red;"></span>
+                        </i>
+                    </div>
+                </div>
             </div>
-    }
+
+            <div class="form-group" id="divChassis">
+                <div class="row">
+                    <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first">Price:</label>
+                    <div class="col-lg-8">
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
+                        </div>
+                        <i class="pad-top-5">
+                            <span class="req" style="color:Red;"></span>
+                        </i>
+                    </div>
+                </div>
+            </div>
+            <input type="hidden" name="quantity" value="1" />
+
+            <div class="form-group">
+                <div class="row">
+                    <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first pad-0">DurationContract:</label>
+                    <div class="col-lg-8">
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.DurationContract, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.DurationContract, "", new { @class = "text-danger" })
+                        </div>
+                        <i class="pad-top-5"><span class="req" style="color:Red;"></span></i>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="row">
+                    <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first pad-0">DurationPay :</label>
+                    <div class="col-lg-8">
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.DurationPay, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.DurationPay, "", new { @class = "text-danger" })
+                        </div>
+                        <i class="pad-top-5"><span class="req" style="color:Red;"></span></i>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <input type="submit" value="Create" class="btn btn-success" />
+            </div>
+        </div>
+    </div>
+}
 
 
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+
+    <script>
+        CKEDITOR.replace('Description', {
+            htmlEncodeOutput: true
+        });</script>
+
 }
