--- a/Project_sem_3/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -372,8 +372,8 @@
                 </div>
             </div>
         </div>*@
-  
-       
+
+
 
     <!-- Bootstrap core JavaScript-->
     <script src="/Areas/Admin/Assets/vendor/jquery/jquery.min.js"></script>
@@ -388,9 +388,11 @@
     <!-- Page level plugins -->
     <script src="/Areas/Admin/Assets/vendor/chart.js/Chart.min.js"></script>
 
-    <!-- Page level custom scripts -->
     <script src="/Areas/Admin/Assets/js/demo/chart-area-demo.js"></script>
-    <script src="/Areas/Admin/Assets/js/demo/chart-pie-demo.js"></script>
+    <script src="/Areas/Admin/Assets/js/demo/chart-pie-demo.js"></script>*
+    <script src="~/Areas/Admin/Assets/js/countdowntime.js"></script>
+    <script src="~/Areas/Admin/Assets/js/jquery.formatNumber-0.1.1.min.js"></script>
+    <script src="~/Areas/Admin/Assets/js/sweetalert.min.js"></script>
     <script src="~/Scripts/ckeditor/ckeditor.js"></script>
     @RenderSection("scripts", required: false)
 
