--- a/Project_sem_3/Areas/Admin/Views/InsurancePackages/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/InsurancePackages/Index.cshtml
@@ -96,7 +96,7 @@
                                                     @item.Insurance.Name
                                                 </td>
                                                 <td>@item.Name</td>
-                                                <td>@item.Description</td>
+                                                <td>@Html.Raw(HttpUtility.HtmlDecode(item.Description))</td>
                                                 <td>$@item.Price</td>
                                                 <td>@item.DurationContract year</td>
 
