--- a/Project_sem_3/Views/MotorInsurance/Order.cshtml
+++ b/Project_sem_3/Views/MotorInsurance/Order.cshtml
@@ -112,7 +112,7 @@
                                                 <div _ngcontent-c5="" class="benefit-icon">
                                                     <i _ngcontent-c5="" class="icon icon-benefit icon-benefit-shield"></i>
                                                 </div>
-                                                <div _ngcontent-c5="" class="benefit-image full-cover" style="background-image: url('https://ngocdiep.vn/uploads/images/img-5787-rs(1).jpg')">
+                                                <div _ngcontent-c5="" class="benefit-image full-cover" style="background-image: url('https://seenbyyou.com/wp-content/uploads/2019/10/modern-motorbike-insurance-service-company-logo-vector-13496017-735x400.jpg')">
                                                     <div _ngcontent-c5="" class="benefit-name-wrapper v-middle">
                                                         <h2 _ngcontent-c5="" class="benefit-name">
                                                             <div _ngcontent-c5="" class="app-checkbox agree-with-term">
