--- a/Project_sem_3/Views/Contract/Index.cshtml
+++ b/Project_sem_3/Views/Contract/Index.cshtml
@@ -427,7 +427,7 @@
                 <div class="row">
                     <div class="col-md-4 col-4"></div>
                     <div class="col-md-4 col-4" id="order">
-                        <input type="submit" value="Order" class="btn-pro-buynow " />
+                        <input type="button" value="Order" class="btn-pro-buynow " />
                     </div>
                     <div class="col-md-4 col-4"></div>
                 </div>
